update description & fix typos
Signed-off-by: Mridul Gain <mridulgain@gmail.com>

--- a/.github/workflows/devCard.yml
+++ b/.github/workflows/devCard.yml
@@ -18,3 +18,5 @@ jobs:
           type: wide
           user_id: ${{ secrets.USER_ID }}
           commit_message: "chore: update ${filename}"
+          # committer_email: mridulgain@gmail.com
+          # committer_name: Mridul Gain
